# bevy_godot

crates/bevy_godot/: Cargo.toml
crates/bevy_godot/src/: lib.rs  prelude.rs
crates/bevy_godot/src/init/: autoload.rs  collision.rs  input.rs  mod.rs  scene_tree.rs  signal_watcher.rs
crates/bevy_godot/src/plugins/: assets.rs  mod.rs  packed_scene.rs
crates/bevy_godot/src/plugins/core/: collisions.rs  godot_ref.rs  input_event.rs  mod.rs  scene_tree.rs  signals.rs  transforms.rs
crates/bevy_godot_derive/: Cargo.toml
crates/bevy_godot_derive/src/: lib.rs
examples/: run_godot.rs
examples/assets_demo/: Cargo.toml
examples/assets_demo/godot/.mono/assemblies/Debug/: api_hash_cache.cfg
examples/assets_demo/src/: lib.rs
