[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "bevy_godot"
version = "0.3.1"

[features]
default = []

trace        = ["bevy/trace"]
trace_chrome = ["trace", "bevy/trace_chrome"]

[dependencies]
anyhow            = "1"
bevy              = { version = "0.9", default-features = false, features = ["bevy_asset"] }
bevy_godot_derive = { path = "../bevy_godot_derive" }
gdnative          = "0.11"
iyes_loopless     = "0.9"
lazy_static       = "1"
once_cell         = "1"
parking_lot       = "0.12"
