[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "assets_demo"
version = "0.1.0"

[[bin]]
name = "assets_demo"
path = "../run_godot.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy              = { version = "0.9", default-features = false }
bevy_asset_loader = "0.14"
bevy_godot        = { path = "../../crates/bevy_godot" }
